# fastapi_msal

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  issue-manager.yml  lint.yml  publish.yml  security.yml
fastapi_msal/: __init__.py  auth.py
fastapi_msal/clients/: __init__.py  async_conf_client.py
fastapi_msal/core/: __init__.py  msal_client_config.py  session_manager.py  utils.py
fastapi_msal/core/session/: __init__.py  base.py  filesystem.py  inmemory.py
fastapi_msal/models/: __init__.py  auth_claims.py  auth_code.py  auth_token.py  base_auth_model.py  common.py  id_token_claims.py  local_account.py  msal_client_config.py  user_info.py
fastapi_msal/routing/: __init__.py  auth.py
fastapi_msal/security/: __init__.py  msal_auth_code_handler.py  msal_scheme.py
fastapi_msal_patched/: __init__.py  auth.py
fastapi_msal_patched/clients/: async_conf_client.py
fastapi_msal_patched/core/: msal_client_config.py
fastapi_msal_patched/models/: __init__.py  auth_code.py  auth_token.py  base_auth_model.py  common.py  id_token_claims.py  local_account.py  user_info.py
fastapi_msal_patched/security/: msal_auth_code_handler.py  msal_scheme.py
scripts/: publish.py
tests/: test_auth.py
