[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fastapi_msal"
author = "Dudi Levy"
author-email = "dudi@elv8.pro"
home-page = "https://github.com/dudil/fastapi_msal"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9"
]
requires = [
    "pydantic",
    "starlette",
    "fastapi",
    "msal"
]
description-file = "README.md"
requires-python = ">=3.9"

[tool.flit.metadata.requires-extra]
full = [
    "python-multipart",
    "itsdangerous"
]


[tool.pylint.master]
fail-under = "9.5"
suggestion-mode = "yes"

[tool.pylint.messages_control]
disable = """
            C0330, C0326,
            missing-class-docstring,
            missing-function-docstring,
            missing-module-docstring,
            invalid-name,
            too-few-public-methods,
"""
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "122"
